DIAC-207 Skip failed SMS notifications (#1076)
* DIAC-207 Skip failed SMS notifications

* DIAC-207 Skip failed Email notifications

---------

Co-authored-by: KleoG <KleoG@users.noreply.github.com>